--- a/TesteUrho.iOS/TesteUrhoSharp.ios.csproj
+++ b/TesteUrho.iOS/TesteUrhoSharp.ios.csproj
@@ -157,6 +157,12 @@
     </Reference>
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TesteUrho\TesteUrhoSharp.csproj">
+      <Project>{8dd49470-0958-42d9-841f-f15589dc9f99}</Project>
+      <Name>TesteUrhoSharp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
